# spindler-c

./: .gitignore  README.md  makefile  meson.build  meson.options
include/: spindler.h
meson/: background.sh  c_sourcefiles.sh  ggtags-create-tags.sh  git_branch.sh  git_revision.sh  git_url.sh  h_sourcefiles.sh  lowercase.sh  make_compile_commands_json.sh  osx_ar.sh  osx_cc.sh  osx_clean_build_ninja.sh  parent_pid.sh  source_files.sh  uppercase.sh  versionof.sh  wait_for_exit.sh
src/: csvreader.c  spindler.c  test.c
tests/: test.c  test_spindler.c
